--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
        <img src="images/bee-movie-01.jpg" />
        <h2>Bee Movie</h2></a>
        </div>
+		
+       <div class="flex-item">
+       <a href="panda.html">
+       <img src="images/kung-fu-panda-01.jpg" />
+       <h2>Bee Movie</h2></a>
+       </div>
 
        <div class="flex-item">
        <a href="how-to-train-your-dragon.html">
