--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
        <div class="flex-item">
        <a href="panda.html">
        <img src="images/kung-fu-panda-01.jpg" />
-       <h2>Bee Movie</h2></a>
+       <h2>Kung Fu Panda</h2></a>
        </div>
 
        <div class="flex-item">
